<resources>
    <string name="app_name">My Application3</string>
    <string name="button">Button</string>
    <string name="str1">result</string>
    <string name="str">put number</string>
    <string name="Main2str1">reset</string>
    <string name="Main2str2">TeamA</string>
    <string name="Mainstr3">0</string>
    <string name="Main2str4">+1points</string>
    <string name="Main2str5">+2points</string>
    <string name="Main2str6">+3points</string>
    <string name="Main3str1">Putnumber</string>
    <string name="str3">dollar</string>
    <string name="str4">europe</string>
    <string name="str5">korea</string>
    <string name="str6">putback</string>
    <string name="str7">go</string>
</resources>
