<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity" >

    <Button
        android:id="@+id/reset"
        android:layout_width="143dp"
        android:layout_height="71dp"
        android:layout_marginBottom="100dp"
        android:onClick="Resetscore"
        android:text="@string/Main2str1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!--margin 边缘 bottom底部-->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/TeamName"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/Main2str2"
            android:textSize="36sp" />
        <!--gravity=center使文本居中-->
        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/Mainstr3"
            android:textSize="36sp" />

        <Button
            android:id="@+id/add1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="ad1"
            android:text="@string/Main2str4" />

        <Button
            android:id="@+id/add2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="ad2"
            android:text="@string/Main2str5" />

        <Button
            android:id="@+id/add3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ad3"
            android:text="@string/Main2str6" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>