<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/str"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button2"
        android:layout_width="421dp"
        android:layout_height="64dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:onClick="btnClick"
        android:text="@string/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="start"
        android:text="@string/str1"
        android:textSize="25sp" />

</LinearLayout>